--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ apt-get install varnish
         <section data-state="jolistate">
             <h3>Grace mode</h3>
             <p>
-                Au lieu d'attendre le nouveau cache on peut envoyer l'ancien = Grace mode
+                Au lieu d'attendre le nouveau cache on peut envoyer l'ancien (stale response)
             </p>
         </section>
 
