--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
         <section data-state="jolistate">
             <h3>Cache</h3>
-
             <p>
                 Un cache réduit le coût des ressources.
             </p>
@@ -65,6 +64,9 @@
 
         <section data-state="jolistate">
             <h2>Faux</h2>
+            <p>
+                <img src="images/faux.gif" alt="" />
+            </p>
         </section>
 
 
