Fix title in auth to be more static with previous slides

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ sub vcl_pass {
         </section>
 
         <section data-state="jolistate">
-            <h4>On peut aussi mettre en cache le hash (avec un Vary sur la session)</h4>
+            <h4>On peut aussi mettre en cache le hash</h4>
             <ul>
                 <li>Client -> requête GET -> Reverse proxy</li>
                 <li>Reverse Proxy -> requête pour récupérer le hash -> Cache</li>
