Add link to slides

--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@ sub vcl_deliver {
 
         <section data-state="jolistate">
             <h2>Merci ! Questions ?</h2>
+            <p>Slides sur <a href="http://jolicode.github.io/http-cache-conf/">http://jolicode.github.io/http-cache-conf/</a></p>
             <p><a href="http://twitter.com/joelwurtz">Joel Wurtz</a></p>
         </section>
     </div>
